syntax = "proto3";
option go_package = "proto/crawler";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";   

// 对外暴露的rpc服务
service CrawlerMaster {
    // 对外暴露AddResource方法，并映射到http post的/crawler/resource路径上
	rpc AddResource(ResourceSpec) returns (NodeSpec) {
	    option (google.api.http) = {
            post: "/crawler/resource"
            body: "*"
        };
	}
    // 对外暴露DeleteResource方法，并映射到http delete的/crawler/resource路径上
	rpc DeleteResource(ResourceSpec) returns (google.protobuf.Empty){
	    option (google.api.http) = {
            delete: "/crawler/resource"
            body: "*"
        };
	}
}

message ResourceSpec {
    string id = 1;
	string name = 2;
	string assigned_node = 3;
	int64 creation_time = 4;
}

message NodeSpec {
    string id = 1;
    string Address = 2;
}